fix loading bgWhite and overflow body

--- a/src/scss/bootstrap_custom.scss
+++ b/src/scss/bootstrap_custom.scss
@@ -28,7 +28,7 @@ $h6-font-size: 1rem;
 $spacer: 1rem;
 
 //? Colore di sfondo del corpo del sito web
-$body-bg: #f8f9fa;
+$body-bg: #3b4153;
 
 //? Colore del testo del corpo del sito web
 $body-color: #212529;
