--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -3,7 +3,7 @@
 body {
 	background: linear-gradient(-45deg, $dark, $dark);
 	background-size: 100% 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 
 	&>* {
 		max-width: 500px;
